--- a/parque_banque_server/src/main/resources/templates/newtransaction.html
+++ b/parque_banque_server/src/main/resources/templates/newtransaction.html
@@ -7,6 +7,7 @@
     <link th:href="@{/css/transaction.css}" href="../static/css/transaction.css" rel="stylesheet">
     <link th:href="@{/css/confirmwindow.css}" href="../static/css/confirmwindow.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700&display=swap" rel="stylesheet">
     <script type="text/javascript" src="javascript/newtransaction.js" defer ></script>
     <script type="text/javascript" src="javascript/confirmwindow.js" defer ></script>
     <title>Overboeken</title>
