--- a/parque_banque_server/src/main/resources/static/css/confirmwindow.css
+++ b/parque_banque_server/src/main/resources/static/css/confirmwindow.css
@@ -1,6 +1,6 @@
 
 html{
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Noto', sans-serif;
 }
 
 /* container om window te openen, fade in bij klik verzenden*/
@@ -10,7 +10,7 @@ html{
     left: 0;
     width: 100%;
     height: 100%;
-    background: #37ad49;
+    background: rgba(0, 0, 0, 0.8);
     padding: 10px;
     box-sizing: border-box;
 
@@ -35,7 +35,7 @@ html{
     max-width: 600px;
     background: #ffffff;
     font-size: 14px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Noto', sans-serif;
     border-radius: 5px;
     overflow: hidden;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -99,7 +99,7 @@ html{
     color: #37ad49;
     font-weight: bold;
     font-size: 1.1em;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Noto', sans-serif;
     margin-left: 0.6em;
     cursor: pointer;
     outline: none;
