--- a/parque_banque_server/src/main/resources/templates/contact.html
+++ b/parque_banque_server/src/main/resources/templates/contact.html
@@ -29,7 +29,7 @@
 <!-- body -->
 <main>
     <div id="contact-content">
-        <h1>Parque Banque <img src="../static/green-heart.png" th:src="@{green-heart.png}" width="74px" height="74px"> van klanten</h1>
+        <h1 style="font-family: 'Montserrat', sans-serif">Parque Banque <img src="../static/green-heart.png" th:src="@{green-heart.png}" width="74px" height="74px"> van klanten</h1>
         <p>Daarom is zaken doen met ons 'like a walk in the park'</p>
 
         <h2>Online</h2>
