--- a/parque_banque_server/src/main/resources/templates/index.html
+++ b/parque_banque_server/src/main/resources/templates/index.html
@@ -36,7 +36,7 @@
     <div class="main-content">
         <img src="../static/parque-banque-logo.jpg" th:src="@{parque-banque-logo.jpg}" alt="parque banque" width="1000" height="165">
 
-<h1>Welkom bij Parque Banque!</h1>
+<h1 style="font-family: 'Montserrat', sans-serif">Welkom bij Parque Banque!</h1>
     </div>
 </main>
 
