css particulieren Hoofd aangepast

--- a/parque_banque_server/src/main/resources/templates/overviewprivateaccounts.html
+++ b/parque_banque_server/src/main/resources/templates/overviewprivateaccounts.html
@@ -3,48 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Overzicht Particulier</title>
+    <link th:href="@{/css/mkbtable.css}" href="../static/css/mkbtable.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <style>
-
-        html {
-            font-family: 'Montserrat', sans-serif;
-        }
 
 
-        td, th {
-            border: 1px solid #ddd;
-            padding: 8px;
-        }
-
-        th {
-            background-color: #37AD49;
-            color: white;
-        }
-
-        h1 {
-            width: 700px;
-            margin: auto;
-            text-align: center;
-        }
-
-        .table {
-            width: 700px;
-            border-collapse: collapse;
-            margin: auto;
-        }
-
-        .table tr:nth-child(even){
-            background-color: #ebf9ee;
-        }
-
-        .table tr:hover {
-            background-color: #d8f3dc;
-        }
-
-        .accountsColumn {
-            text-align: right;
-        }
-    </style>
 </head>
 <body>
 <a href="/uitloggen"><button>Uitloggen</button></a>
@@ -53,19 +15,22 @@
     <main>
         <h1>Overzicht particuliere rekeninghouders</h1>
 
-        <table class="table">
+        <table id="ranking-table" table class="content-table">
+            <thead>
             <tr>
-                <th>#</th>
+                <th>Nummer</th>
                 <th>Klant</th>
                 <th>Saldo</th>
-                <th># rekeningen</th>
+                <th>Aantal Rekeningen</th>
             </tr>
+            </thead>
             <tr th:each="key, index : ${richestCustomers.keySet()}">
                 <td th:text="${index.count}"></td>
                 <td th:text="${richestCustomers.get(key)[0].firstName} + ' ' + ${richestCustomers.get(key)[0].affix} + ' ' + ${richestCustomers.get(key)[0].surName}"></td>
                 <td th:text="'€ ' + ${#numbers.formatDecimal(key/100.0, 0, 'POINT', 2, 'COMMA')}"></td>
                 <td th:text="${richestCustomers.get(key)[1]}" class="accountsColumn"></td>
             </tr>
+
         </table>
     </main>
 </body>
