--- a/parque_banque_server/src/main/resources/templates/tenrichestbusinessaccounts.html
+++ b/parque_banque_server/src/main/resources/templates/tenrichestbusinessaccounts.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Zakelijke klanten met het hoogste saldo</title>
-    <link th:href="@{/css/tenrichestbusinessaccounts.css}" href="../static/css/tenrichestbusinessaccounts.css" rel="stylesheet">
+    <link th:href="@{/css/mkbtable.css}" href="../static/css/mkbtable.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
+<main>
 <h2>Zakelijke Klanten</h2>
 <table id="ranking-table" table class="content-table">
     <thead>
@@ -27,6 +28,6 @@
     </tr>
 </table>
 
-
+</main>
 </body>
 </html>
