--- a/parque_banque_server/src/main/resources/templates/averagebalancesector.html
+++ b/parque_banque_server/src/main/resources/templates/averagebalancesector.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Gemiddelde saldo sectoren</title>
-    <link th:href="@{/css/averagebalancesector.css}" href="../static/css/averagebalancesector.css" rel="stylesheet">
+    <link th:href="@{/css/mkbtable.css}" href="../static/css/mkbtable.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
