css/html opgeschoond

--- a/parque_banque_server/src/main/resources/templates/averagebalancesector.html
+++ b/parque_banque_server/src/main/resources/templates/averagebalancesector.html
@@ -7,8 +7,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
+<a href="/uitloggen"><button>Uitloggen</button></a>
+<a href="/personeel-home"><button>Terug</button></a>
+<main>
 <h2>Sectoren</h2>
-<table id="ranking-table" table class="content-table">
+<table table class="content-table">
     <thead>
     <tr>
         <th>Sector Naam</th>
@@ -22,8 +25,7 @@
     </tr>
 </table>
 
-
+</main>
 </body>
 
-</body>
 </html>
