--- a/parque_banque_server/src/main/resources/templates/tenrichestbusinessaccounts.html
+++ b/parque_banque_server/src/main/resources/templates/tenrichestbusinessaccounts.html
@@ -8,9 +8,11 @@
 </head>
 
 <body>
+<a href="/uitloggen"><button>Uitloggen</button></a>
+<a href="/personeel-home"><button>Terug</button></a>
 <main>
 <h2>Zakelijke Klanten</h2>
-<table id="ranking-table" table class="content-table">
+<table  table class="content-table">
     <thead>
     <tr>
         <th>Nummer</th>
