JavaScript en Ajax, voor het weergeven van bedrijfsgegevens obv kvk

--- a/parque_banque_server/src/main/resources/templates/newcompany.html
+++ b/parque_banque_server/src/main/resources/templates/newcompany.html
@@ -74,8 +74,8 @@
         <br><br>
 
     <label>Sector *</label>
-    <select th:field="*{sectorName}">
-        <option th:each="sector : ${sectoren}" th:value="${sector.getName()}" th:text="${sector.getName()}"
+    <select id="sectorField" th:field="*{id}">
+        <option th:each="sector : ${sectoren}" th:value="${sector.getId()}" th:text="${sector.getName()}"
                 oninput="setCustomValidity('')"></option>
     </select>
         <br><br>
