service werkt, lijst wordt weergegeven, maar dubbele waarden worden nog niet weergegeven

--- a/parque_banque_server/src/main/resources/templates/overviewbusinessaccount.html
+++ b/parque_banque_server/src/main/resources/templates/overviewbusinessaccount.html
@@ -17,6 +17,10 @@
     <input type="submit" name="Sectoren" value="Sectoren" >
 
 </form>
+<form action="/overzicht-bedrijven" method="post" th:object="${mostActiveBusinessAccounts}" >
+    <input type="submit" name="Transacties" value="Transacties" >
+
+</form>
 
 </body>
 </html>
