--- a/parque_banque_server/src/main/resources/static/css/main.css
+++ b/parque_banque_server/src/main/resources/static/css/main.css
@@ -67,26 +67,22 @@ main {
     font-family: sans-serif;
     display: block;
     min-height: 500px;
-    margin-top: 125px;
-    margin-left:auto;
+    margin: 0;
+    
 
 }
 
 .main-content{
 text-align: center;
+
 }
 
-.main-content img{
-    width: 100%;
-    max-width: 940px;
-}
+
 .form1{
     margin-left: 20px
 }
 
 footer {
-   display: inline-block;
-  position: fixed;
   bottom: 10px;
     width: 100%;
     background-color: #2e2a2a;
@@ -101,6 +97,7 @@ footer {
 
 .footer-list {
     display: inline-block;
+    height: 60px;
     margin: 1em;
     list-style-type: none;
 }
