--- a/parque_banque_server/src/main/resources/templates/index.html
+++ b/parque_banque_server/src/main/resources/templates/index.html
@@ -89,7 +89,7 @@
     <div class="information">
         <figure>
             <img th:src="@{images/rsz_canva_-_man_in_white_dress_shirt_and_black_pants_sitting_on_bench.jpg}" src="../static/images/rsz_canva_-_man_in_white_dress_shirt_and_black_pants_sitting_on_bench.jpg" alt="Man in white shirt with tablet">
-            <figcaption>Iedereen is bij ons van harte welkom. Klant worden regelen je gemakkelijk online! Open nu een rekening en ontvang €25,00 cadeau. </figcaption>
+            <figcaption>Iedereen is bij ons van harte welkom. Klant worden regel je gemakkelijk online! Open nu een rekening en ontvang €25,00 cadeau. </figcaption>
         </figure>
         <figure>
             <img th:src="@{images/rsz_canva_-_woman_using_cellphone_while_sitting_on_wooden_bench.jpg}" src="../static/images/rsz_canva_-_woman_using_cellphone_while_sitting_on_wooden_bench.jpg" alt="Woman using phone sitting on wooden bench">
