css confirscherm nieuwe rekening opgeschoond

--- a/parque_banque_server/src/main/resources/templates/newprivateaccount.html
+++ b/parque_banque_server/src/main/resources/templates/newprivateaccount.html
@@ -2,14 +2,10 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>nieuwe particuliere rekening openen</title>
+    <title>Nieuwe Particuliere Rekening Openen</title>
     <link th:href="@{/css/newprivateaccount.css}" href="../static/css/newprivateaccount.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <style>
 
-
-
-    </style>
 </head>
 
 <body>
