--- a/parque_banque_server/src/main/resources/templates/confirmnewaccount.html
+++ b/parque_banque_server/src/main/resources/templates/confirmnewaccount.html
@@ -2,85 +2,44 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Bevestiging Nieuwe Particuliere Rekening Geopend</title>
+    <title>Bevestiging Nieuwe Particuliere Rekening </title>
+    <link th:href="@{/css/newprivateaccount.css}" href="../static/css/newprivateaccount.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <style>
-         .hoofd-div{
 
-           padding-top: 5%;
-            padding-left: 20%;
-            margin-top: 3%;
-            margin-left: -8%;
-            margin-right: -8%;
-            background-color:#37AD49; 
-            font-family:sans-serif; 
-            margin-bottom: 10%;
-         
-         
-        }
-        .sub-div{
-           padding-left: 20%;
-            font-family: sans-serif;
-           margin-top: -5%;
-            margin-left: -8%;
-            margin-right: 55%;
-        }
-        
         .IbanSaldo{
-              padding-left: 20%;
+            padding-left: 20%;
             font-family: sans-serif;
-           margin-top: 6%;
+            margin-top: 6%;
             margin-left: -8%;
             margin-right: 65%;
-          
-        }
-        
-        
-        .knop-div{
-              margin-top:   10%;
-            padding-left: 20%;
-             margin-left: -8%;
-            margin-right: -8%;
 
         }
-        
-        #rekeningoverzicht{
-            padding: 20px 40px;
-            color: #fff; 
-            border-radius: 25px;
-            background-color: #37AD49;
-            border: 2px solid #37AD49;
-            border-color: #37AD49;
-            cursor: pointer;
-        }
-    
-    
-    
-    
-    
+
     </style>
 </head>
 <body>
-    <div class="hoofd-div">
+<div class="hoofd-div">
     <h1> Gefeliciteerd! U heeft een nieuwe rekening geopend voor
         <span th:if="${businessAccount}" class="businessClass" th:text="${name}"/>
         <span th:if="${privateAccount}" class="privateClass" th:text="${name}"/>
     </h1>
-    </div>
-    
-    <div class="sub-div">
+</div>
+
+<div class="sub-div">
     <h3>Detailinformatie nieuwe bankrekening:</h3>
-    </div>
-    
-    <div class="IbanSaldo" >
+</div>
+
+<div class="IbanSaldo" >
     <h2>IBAN: <span th:text="${iban}" /></h2>
     <h2>Saldo: <span th:text="${balanceCent}" /></h2>
-     </div>
-    
-    
-    <div class="knop-div">
+</div>
+
+
+<div class="knop-div">
     <form action="/rekening-overzicht">
-    <input type="submit" value="rekeningoverzicht" id="rekeningoverzicht">
+        <input type="submit" value="Rekeningoverzicht" id="bevestigen">
     </form>
-    </div>
+</div>
 </body>
 </html>
