--- a/parque_banque_server/src/main/resources/templates/linkpaymentaccount.html
+++ b/parque_banque_server/src/main/resources/templates/linkpaymentaccount.html
@@ -5,6 +5,7 @@
     <title>Voeg rekening toe</title>
     <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <script type="text/javascript" src="javascript/linkaccount.js" defer></script>
 
 </head>
 <style>
@@ -57,7 +58,6 @@
     <ul>
         <li class="logo-link"><a id="logo" href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}"
                                                          alt="parque banque"></a>
-        <li/>
         <li class="nav-link"><a href="/contact">Contact</a></li>
     </ul>
 </nav>
