--- a/parque_banque_server/src/main/resources/templates/selectedaccount.html
+++ b/parque_banque_server/src/main/resources/templates/selectedaccount.html
@@ -1,96 +1,67 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="UTF-8">
         <title>Geselecteerde rekening</title>
         <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
+        <link th:href="@{/css/accountview.css}" href="../static/css/accountview.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
-        <style>
-            table {
-                alignment: center;
-                width: 100%;
-                border: 1px solid black
-            }
-            td {
-                font-family: "Arial",sans-serif;
-                width: 100px;
-                font-size: small;
-            }
-            th {
-                border: 1px solid #dddddd;
-                text-align: left;
-                font-family: "Arial",sans-serif;
-                font-size: small;
-                padding: 8px;
-                width: 300px;
-            }
-            thead {
-                font-size: 8px
-            }
-            h1 {
-                font-family: "Arial",sans-serif;
-                font-size: x-large;
-            }
-            h2 {
-                font-family: "Arial", sans-serif;
-                font-size: small;
-            }
-            tr:nth-child(even) {
-                background-color: #dddddd;
-            }
-            button {
-                alignment: left;
-            }
-            tr[data-href]:hover {
-                cursor: pointer;
-            }
-        </style>
-
     </head>
+
     <body>
         <!-- navigatie -->
         <nav class="navigation">
             <ul>
-                <li class= "logo-link"><a id="logo" href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque"></a></li>
-                <li class="nav-link"><a  href="/rekening-overzicht">Rekeningoverzicht</a></li>
-                <li class="nav-link"><a  href="/rekening-openen">Rekening openen</a></li>
+                <li class= "logo-link"><a id="logo" href="/"><img src="../static/logo-small.png" th:src="@{/logo-small.png}" alt="parque banque"></a></li>
                 <li class="nav-link"><a  href="/uitloggen">Uitloggen</a></li>
+                <li class="nav-link"><a  href="/rekening-overzicht">Rekeningoverzicht</a></li>
             </ul>
         </nav>
 
         <!-- body -->
-        <!-- Thymeleaf geeft hier foutmeldingen aan, deze zijn te negeren. Alles werkt nog. Foutmelding komt waarschijnlijk
-         doordaat de model.addAttribute taken in een methode buiten de controller worden toegevoegd.--->
+        <main class="container">
+            <h2>Rekeningoverzicht</h2>
+            <h3 class="datetime"><span th:text="${DatumEnTijd}"></span></h3>
 
-        <p>Datum en tijd:<span th:text="${DatumEnTijd}"></span></p>
-        <br/>
+            <div class="accountinfo">
+                <h3 th:if="${isCompany}"><span th:text="${businessName}"></span></h3>
+                <h3><span th:text="${names}"></span></h3>
+                <h3><span th:text="${iban}"></span></h3>
+                <h3 class="balance"><span th:text="${saldo}"></span></h3>
+            </div>
 
-        <h4>Rekeningnummer: <span th:text="${iban}"></span></h4>
-        <h4 th:if="${isCompany}"> Bedrijfsnaam: <span th:text="${businessName}"></span> </h4>
-        <h4>Tenaamstelling: <span th:text="${names}"></span></h4>
-        <h4>Saldo: <span th:text="${saldo}"></span></h4>
+            <div class="buttons">
+                <a href="/rekeninghouder-toevoegen"><button>Rekeninghouder toevoegen</button></a>
+                <a href="/overboeken"><button>Geld overmaken</button></a>
+            </div>
 
-        <a href="/rekeninghouder-toevoegen"><button>Rekeninghouder toevoegen</button></a>
-        <a href="/overboeken"><button>Geld overmaken</button></a>
+            <br>
 
-        <h2>Transacties</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Van/naar</th>
-                    <th>Bedrag</th>
-                    <th>Datum</th>
-                    <th>Beschrijving</th>
-                </tr>
-            </thead>
-            <tr th:each="transactie : ${transacties}">
-                <td th:text="${transactie.oppositeAccountIban}" ></td>
-                <td th:text="${transactie.amount}"></td>
-                <td th:text="${transactie.date}"> </td>
-                <td th:text="${transactie.description}"></td>
-            </tr>
-        </table>
+            <h1>Transacties</h1>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Bedrag</th>
+                        <th>Datum</th>
+                        <th>Van/naar</th>
+                        <th>Beschrijving</th>
+                    </tr>
+                </thead>
 
+                <tbody>
+                    <tr th:if="${transacties.empty}">
+                    <td>Geen transacties</td>
+                    </tr>
+                    <tr th:each="transactie : ${transacties}">
+                        <td th:text="${transactie.amount}"></td>
+                        <td th:text="${transactie.date}"> </td>
+                        <td th:text="${transactie.oppositeAccountIban}" ></td>
+                        <td th:text="${transactie.description}"></td>
+                    </tr>
+                </tbody>
+            </table>
+
+        </main>
     </body>
 </html>
