--- a/parque_banque_server/src/main/resources/templates/confirmsignup.html
+++ b/parque_banque_server/src/main/resources/templates/confirmsignup.html
@@ -30,12 +30,12 @@
 
     <main>
         <h1>Bevestig uw gegevens</h1>
-        <p style="margin-bottom: 5px;">Controleer uw gegevens zorgvuldig. Klik op Wijzig gegevens als u iets wilt veranderen.</p>
-        <p style="margin-bottom: 5px;">Als u alles correct hebt ingevuld, klik dan op Volgende om een account aan te maken</p>
+        <p>Controleer uw gegevens zorgvuldig. Klik op Wijzig gegevens als u iets wilt veranderen.<br>
+        Als u alles correct hebt ingevuld, klik dan op Volgende om een account aan te maken</p>
         <form th:action="@{/klant-worden}" th:object="${signupform}" method="post">
 
             <div>
-                <p>PERSOONSGEGEVENS</p>
+                <p class="formPart">Persoonsgegevens</p>
                 <div style="width: 480px">
                     <label for="firstName">Voornaam</label>
                     <input id="firstName" type="text" readonly th:field="${signupform.firstName}"/>
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div>
-                <p>ADRESGEGEVENS</p>
+                <p class="formPart">Adresgegevens</p>
                 <div style="width: 150px">
                     <label for="zipcode">Postcode</label>
                     <input id="zipcode" type="text" readonly th:field="${signupform.zipcode}"/>
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div>
-                <p>CONTACTGEGEVENS</p>
+                <p class="formPart">Contactgegevens</p>
                 <div>
                     <label for="phone">Telefoon nummer</label>
                     <input id="phone" type="tel" readonly th:field="${signupform.phone}"/>
